--- a/LoginPage/style.css
+++ b/LoginPage/style.css
@@ -12,6 +12,9 @@ body{
     height: 550px;
     width: 1000px;
     border-radius:10px ;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	position: relative;
+	overflow: hidden;
 }
 .sidebar-container img{
     height: 550px;
