Counter app completed

--- a/React/counter/src/App.css
+++ b/React/counter/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  /* margin-top: 20%; */
   text-align: center;
 }
 
@@ -35,4 +36,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+.counter-button{
+  margin: 10px;
+  height: 50px;
+  width:60px;
+  color:blue;
+  font-size: 50px;
+
+}
+.counter-number{
+  font-size: 100px;
 }
